Middle Header: Fix jumping toast notification (#2012)

--- a/src/components/ui/Notification.scss
+++ b/src/components/ui/Notification.scss
@@ -2,18 +2,22 @@
   position: relative;
   width: 24rem;
   max-width: 100vw;
-  margin: 0.25rem auto;
+  margin: 4.25rem auto 0.25rem;
   z-index: var(--z-notification);
+
+  .has-header-tools & {
+    margin-top: 7.375rem;
+  }
 
   @media (min-width: 1276px) {
     transition: transform var(--layer-transition);
   }
 
-  &:first-of-type {
-    margin-top: 4.25rem;
+  & ~ & {
+    margin-top: 0.25rem;
 
     .has-header-tools & {
-      margin-top: 7.375rem;
+      margin-top: 0.25rem;
     }
   }
 }
